--- a/ft-scrolling-behavior.html
+++ b/ft-scrolling-behavior.html
@@ -36,7 +36,7 @@ limitations under the License.
 
             _managedScrollers: {
                 type: Array,
-                value: []
+                value: function() { return []; }
             }
 
         },
