--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -19,6 +19,12 @@ A behavior that helps with scrolling of elements.
 
     <template>
 
+        <style>
+            :host {
+                display:block;
+            }
+        </style>
+
         <ft-scrolling-behavior></ft-scrolling-behavior>
 
     </template>
