--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -1,9 +1,9 @@
 <!-- ft-scrolling-behavior element demo -->
 
 <!-- Imports -->
-<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../ft-element-demo/ft-element-demo.html">
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
-
+<link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../ft-scrolling-behavior.html">
 
 
