--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -22,6 +22,7 @@ A behavior that helps with scrolling of elements.
         <style>
             :host {
                 display:block;
+                overflow:hidden;
             }
         </style>
 
